--- a/src/app.html
+++ b/src/app.html
@@ -15,14 +15,6 @@
 				--font-body: 'lft-etica-mono', sans-serif;
 			}
 
-			body {
-				margin: 0;
-				padding: 0;
-				font-family: var(--font-body);
-				-webkit-font-smoothing: antialiased;
-				-moz-osx-font-smoothing: grayscale;
-			}
-
 			/* Box sizing rules */
 			*,
 			*::before,
@@ -59,6 +51,12 @@
 
 			/* Set core body defaults */
 			body {
+				margin: 0;
+				padding: 0;
+				font-family: var(--font-body);
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+				text-rendering: optimizeLegibility;
 				min-height: 100vh;
 				line-height: 1.5;
 			}
