Adds GSAP and pin-effect on sections

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,8 @@
 			:root {
 				--font-heading: 'garamond-premier-pro-display', serif;
 				--font-body: 'lft-etica-mono', sans-serif;
+				--white-color: #f1f2ee;
+				--black-color: #231f20;
 			}
 
 			/* Box sizing rules */
@@ -59,6 +61,8 @@
 				text-rendering: optimizeLegibility;
 				min-height: 100vh;
 				line-height: 1.5;
+				background-color: var(--white-color);
+				color: var(--black-color);
 			}
 
 			/* Set shorter line heights on headings and interactive elements */
