Adds sections, motion and styling

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,7 @@
 				--font-body: 'lft-etica-mono', sans-serif;
 				--white-color: #f1f2ee;
 				--black-color: #231f20;
+				--max-width: 968px;
 			}
 
 			/* Box sizing rules */
@@ -43,6 +44,7 @@
 			dl,
 			dd {
 				margin-block-end: 0;
+				margin: 0;
 			}
 
 			/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
