--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,6 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://use.typekit.net/oig1ozn.css" />
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			:root {
@@ -61,7 +57,8 @@
 				-webkit-font-smoothing: antialiased;
 				-moz-osx-font-smoothing: grayscale;
 				text-rendering: optimizeLegibility;
-				min-height: 100vh;
+				height: 100%;
+				width: 100%;
 				line-height: 1.5;
 				background-color: var(--white-color);
 				color: var(--black-color);
